Signed-off-by: amen <amen@localhost.localdomain>

--- a/static/bigscreenhost.html
+++ b/static/bigscreenhost.html
@@ -69,8 +69,8 @@ var screen_id=0
 </script>
 当前状态<div id="state"></div><br />
 <div>
-    必须先提交屏幕id<input id="client_id" type="text"><input type="button" onclick="regist()" value="提交">
-    <input id="codelen" type="text">
+    必须先提交屏幕id<input id="client_id" type="text"><input type="button" onclick="regist()" value="提交"><br>
+    client_code长度<input id="codelen" type="text">
 </div>
 <div id="frame_content" src="" style="word-break:break-all;width: 100%" scrolling="no"></div>
 </body>
